update: JVM